--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-.classpath           # 所有目录下或者后缀是.classpath
-.project             # 所有目录下或者后缀是.project
-*.settings/*          # 所有目录下或者后缀是.settings，以及.settings下所有文件
-
+# 所有目录下或者后缀是.classpath
+.classpath
+# 所有目录下或者后缀是.project
+.project
+# 所有目录下或者后缀是.settings，以及.settings下所有文件
+*.settings/*
+target/*
